correct overflow

--- a/src/AppStyle.scss
+++ b/src/AppStyle.scss
@@ -6,7 +6,7 @@ body{
     padding: 0;
     width: 100vw;
     height:100vh;
-    overflow: hidden;
+    
 }
 ul{
     list-style: none;
