--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -4,79 +4,84 @@
     flex:1;
     padding: 5rem 2.5rem 1rem 4rem;
     background: colors.$main-background-color;
-    // >.container{
+    height: 100%;
+    display: flex;
+    position: relative;
+    justify-content: flex-end;
+    align-content: center;
+    flex-direction: row;
+    overflow-y: hidden;
+    >.main__info{
+        z-index:1;
+        color:colors.$main-color;
+        margin-top:3rem;
         display: flex;
-        position: relative;
-        justify-content: flex-end;
-        align-content: center;
-        flex-direction: row;    
-        >.main__info{
-            z-index:1;
-            color:colors.$main-color;
-            margin-top:3rem;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: space-around;
-            position: absolute;
-            left:5rem;
-            width: 60%;
-            max-width: 60%;
-            >.info__heading{
-                font-size: 4.5rem;
-                font-weight: 800;
-                line-height: 5.625rem;
-                text-align: left;
-                margin: .5rem 0 0;
-                text-transform: uppercase;
-                letter-spacing: .02em;
-                text-wrap: nowrap;
-                &:first-of-type{
-                    margin-top: 2rem;
-                }
-            }
-            >.info__secondary{
-                font-size: 1.75rem;
-                font-weight: 300;
-                font-style: normal;
-                text-align: left;
-                //text-indent: 0;
-                //text-indent: 5em hanging each-line;
-            }
-            >.main__rectangle{
-                margin-top: 1rem;
-                display: block;
-                width: 12rem;
-                height: .625rem;
-                background: colors.$home-rectangle-color;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        position: absolute;
+        left:5rem;
+        width: 60%;
+        max-width: 60%;
+        max-height: 100%;
+        overflow: hidden;
+        >.info__heading{
+            font-size: 4.5rem;
+            font-weight: 800;
+            line-height: 5.625rem;
+            text-align: left;
+            margin: .5rem 0 0;
+            text-transform: uppercase;
+            letter-spacing: .02em;
+            text-wrap: nowrap;
+            &:first-of-type{
+                margin-top: 2rem;
             }
         }
-        >.main__img-cont{
-            max-height: 600px;
-                position: relative;
-                >.main__img{
-                    display: block;
-                    max-height: 100%;
-                    height: 100%;
-                }
-                >.img__copyright{
-                    position: absolute;
-                    left:5%;
-                    bottom: 5%;
-                    color:aliceblue;
-                    z-index: 3;
-                    >a{
-                        color:aliceblue;
-                        font-weight: 600;
-                        font-size: 1.1em;
-                        transition: color .25s ease-in-out;
-                        &:hover{
-                            color:blue;
-                        }
-                    }
+        >.info__secondary{
+            font-size: 1.75rem;
+            font-weight: 300;
+            font-style: normal;
+            text-align: left;
+            //text-indent: 0;
+            //text-indent: 5em hanging each-line;
+        }
+        >.main__rectangle{
+            margin-top: 1rem;
+            display: block;
+            width: 12rem;
+            height: .625rem;
+            background: colors.$home-rectangle-color;
+        }
+    }
+    >.main__img-cont{
+        max-height: 50vh;
+        height: 100%;
+        padding: 2rem 0;
+        position: relative;
+        overflow: hidden;
+        >.main__img{
+            display: block;
+            max-height: 100%;
+            height: 100%;
+        }
+        >.img__copyright{
+            position: absolute;
+            left:5%;
+            bottom: 5%;
+            color:aliceblue;
+            z-index: 3;
+            >a{
+                color:aliceblue;
+                font-weight: 600;
+                font-size: 1.1em;
+                transition: color .25s ease-in-out;
+                &:hover{
+                    color:blue;
                 }
             }
-    // }
+        }
+    }
 }
 .info__button{
     padding: 1.125rem 2.5rem;
